# agentic-doc

./: .env.example  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
apps/explorer/: README.md  pyproject.toml
apps/explorer/.streamlit/: config.toml
apps/explorer/src/agentic_doc_explorer/: app.py  cli.py  constants.py  pipeline.py  startup_ingest.py  workspace.py
apps/explorer/tests/: test_constants.py  test_startup_ingest.py
apps/ingest/: README.md  pyproject.toml
apps/ingest/src/agentic_doc_ingest/: main.py
corpora/rust-book/: UPSTREAM
scripts/: download.py  smoke_answer.py  sync_demo_corpus.py
