[project]
name = "agentic-doc"
version = "0.1.0"
description = "Production-grade Agentic RAG for documents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]

[tool.uv.sources]
agentic-doc-core = { workspace = true }
agentic-doc-rag  = { workspace = true }
agentic-doc-agent = { workspace = true }
explorer  = { workspace = true }

[dependency-groups]
dev = [
    "agentic-doc-core",
    "agentic-doc-rag",
    "agentic-doc-agent",
    "explorer",
    "arize-phoenix>=12.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "ty>=0.0.53",
]


# =====================
# Tooling
# =====================

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.isort]
known-first-party = [
    "agentic_doc_agent",
    "agentic_doc_core",
    "agentic_doc_explorer",
    "agentic_doc_rag",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # Ruff formatter handles line length

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["packages", "apps"]
python_files = ["test_*.py"]
pythonpath = ["packages/rag/tests"]
addopts = "-ra --strict-markers --import-mode=importlib --cov --cov-report=term-missing"

[tool.ty]
environment = { root = [
    "packages/core/src",
    "packages/rag/src",
    "packages/agent/src",
    "apps/explorer/src",
], extra-paths = [
    "packages/rag/tests",
] }
