[project]
name = "explorer"
version = "0.1.0"
description = "M1 RAG explorer — Streamlit search UI and ingestion CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentic-doc-core",
    "agentic-doc-rag",
    "streamlit>=1.42.0",
]

[project.scripts]
explorer = "agentic_doc_explorer.cli:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agentic_doc_explorer"